<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="album"
            type="co.edu.uniandes.miso.vinilos.model.domain.DetailAlbum" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/album_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@{album.releaseDate}"
            android:textColor="@color/mainTextColor"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/album_cover"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="17dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            app:imageUrl="@{album.cover}" />

        <TextView
            android:id="@+id/album_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{album.name}"
            android:textColor="@color/mainTextColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/album_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:layout_marginBottom="22dp"
                    android:text="@{album.description}"
                    android:textAlignment="center"
                    android:textColor="@color/mainTextColor"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/album_genre"
                    android:text="@string/album_detail_general_genre"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/album_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@{album.genre}"
                    android:textColor="@color/mainTextColor"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:labelFor="@+id/album_recordLabel"
                    android:text="@string/album_detail_general_record_label"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/album_recordLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@{album.recordLabel}"
                    android:textColor="@color/mainTextColor"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
