<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="comment"
            type="co.edu.uniandes.miso.vinilos.model.domain.DetailComment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/collector_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{comment.collector}"
            android:textColor="@color/mainTextColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/comment_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginEnd="8dp"
                android:text='@{String.valueOf(comment.rating)}'
                android:textColor="@color/mainTextColor"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/comment_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:lastBaselineToBottomHeight="0dp"
                android:text="@{comment.description}"
                android:textColor="@color/mainTextColor"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</layout>
